--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>HBNB</title>
+    <title>Number: {{ n }} is {{ status }}</title>
   </head>
   <body>
     <h1>Number: {{ n }} is {{ status }}</h1>
