--- a/python-web_framework/templates/5-number.html
+++ b/python-web_framework/templates/5-number.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HBNB</title>
+    <title>Number Template</title>
   </head>
   <body>
     <h1>Number: {{ n }}</h1>
