--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>HBNB</title>
+    <title>Number: {{ n }} is {{ status }}</title>
   </head>
   <body>
-    {% if n is even %}
-    <h1>Number: {{ n }} is even</h1>
-    {% else %}
-    <h1>Number: {{ n }} is odd</h1>
-    {% endif %}
+    <h1>Number: {{ n }} is {{ status }}</h1>
   </body>
 </html>
