--- a/python-web_framework/templates/5-number.html
+++ b/python-web_framework/templates/5-number.html
@@ -4,6 +4,6 @@
     <title>Number Template</title>
   </head>
   <body>
-    <h1>Number: {{ n }}</h1>
+    <h1>Number: {{ n_int }}</h1>
   </body>
 </html>
