--- a/python-web_framework/templates/5-number.html
+++ b/python-web_framework/templates/5-number.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Number Template</title>
-  </head>
-  <body>
-    <h1>Number: {{ n }}</h1>
-  </body>
-</html>
+<HTML lang="en">
+  <HEAD>
+    <TITLE>Number Template</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>Number: {{ n }}</H1>
+  </BODY>
+</HTML>
