--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Number: {{ n }} is {{ status }}</title>
-  </head>
-  <body>
-    <h1>Number: {{ n }} is {{ status }}</h1>
-  </body>
-</html>
+<HTML lang="en">
+  <HEAD>
+    <TITLE>Number: {{ n }} is {{ status }}</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>Number: {{ n }} is {{ status }}</H1>
+  </BODY>
+</HTML>
